fixup!: run podman machine as rootful
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -43,71 +43,6 @@ jobs:
           # Create Kind cluster with Podman
           kind create cluster --name "test-cluster-podman" --image kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
 
-      - name: Debug Docker startup
-        shell: powershell
-        run: |
-          Write-Host "Listing WSL distros..."
-          docker desktop engine ls
-
-          Write-Host "Switching to Linux engine..."
-          docker desktop engine linux
-
-          Write-Host "Starting Docker Desktop..."
-          docker desktop start
-
-          Write-Host "Switching to Linux engine..."
-          docker desktop engine linux
-
-          choco install kind -y
-
-          # Create Kind cluster
-          kind create cluster --name "debug-wsl-kind" --image kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
-
-      - name: WSL Version
-        shell: bash
-        run: wsl --version
-
-      - name: WSL Switch to version 2
-        shell: bash
-        run: wsl --set-default-version 2
-
-      - name: Show WSL Version
-        shell: bash
-        run: wsl --version
-
-      - name: Install Ubuntu
-        shell: powershell
-        run: wsl --install Ubuntu-24.04
-
-      - name: List WSL Distros After Install
-        shell: bash
-        run: wsl --list --verbose
-
-      - name: Install Docker CLI in WSL
-        shell: bash
-        run: |
-          wsl -d Ubuntu-24.04 -- bash -c "sudo apt-get update && sudo apt-get install -y docker.io"
-
-      - name: Show Docker Info
-        shell: bash
-        run: wsl -d Ubuntu-24.04 -- docker info
-
-      - name: Show Docker Version
-        shell: bash
-        run: wsl -d Ubuntu-24.04 -- docker --version
-
-      - name: Install kind
-        shell: bash
-        run: wsl -d Ubuntu-24.04 -- bash -c "curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.24.0/kind-linux-amd64 && chmod +x ./kind && sudo mv ./kind /usr/local/bin/kind"
-
-      - name: Create kind cluster
-        shell: bash
-        run: wsl -d Ubuntu-24.04 -- bash -c "kind create cluster --name debug-wsl-kind --image kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a"
-
-      - name: List kind clusters
-        shell: bash
-        run: wsl -d Ubuntu-24.04 -- bash -c "kind get clusters"
-
   pre-commit:
     name: Pre-commit Checks
     runs-on: ubuntu-latest
@@ -477,17 +412,13 @@ jobs:
         env:
           KIND_EXPERIMENTAL_PROVIDER: podman
         run: |
-          # Set WSL to version 2
           wsl --set-default-version 2
-
-          # Install Podman and Kind
           choco install podman-cli kind -y
 
-          # Start Podman machine
           podman machine init
+          podman machine set --rootful
           podman machine start
 
-          # Create Kind cluster with Podman
           kind create cluster --name "${{ steps.uuid.outputs.result }}" --image kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
 
       # NOTE: engineerd/setup-kind does not work on Windows runners
