fixup!: rename test that overlaps with provider context
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -250,7 +250,7 @@ jobs:
             install-kind: true
             needs-github-token: true
 
-          - label: up && provider
+          - label: up && provider-kubernetes
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
