fixup!: setup pull request target
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -2,6 +2,18 @@ name: Commit
 
 on:
   pull_request:
+    paths:
+      - .github/**
+  pull_request_target:
+    paths:
+      - cmd/**
+      - pkg/**
+      - desktop/**
+      - e2e/**
+      - Cargo.toml
+      - Cargo.lock
+      - go.mod
+      - go.sum
 
 jobs:
   commits:
