--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,6 +4,18 @@ on:
   push:
     branches: [main]
   pull_request:
+    paths:
+      - .github/**
+  pull_request_target:
+    paths:
+      - cmd/**
+      - pkg/**
+      - desktop/**
+      - e2e/**
+      - Cargo.toml
+      - Cargo.lock
+      - go.mod
+      - go.sum
 
 jobs:
   lint:
