chore(taskfile): update tasks
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,7 +45,7 @@ builds:
   - id: devpod-dev
     goos: [linux]
     goarch: [amd64]
-    binary: devpod-{{ .Os }}-{{ .Arch }}-dev
+    binary: devpod-{{ .Os }}-{{ .Arch }}
 archives:
   - formats: [tar.gz]
     format_overrides:
