--- a/.github/actions/create-windows-release-artifacts/action.yml
+++ b/.github/actions/create-windows-release-artifacts/action.yml
@@ -37,61 +37,55 @@ runs:
         TAURI_SIGNING_PRIVATE_KEY: ${{ inputs.tauri_private_key }}
         TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ inputs.tauri_key_password }}
 
-    - uses: actions/github-script@v8
+    - name: Create MSI zip file
+      shell: powershell
+      run: |
+        $bundlePath = "desktop/src-tauri/target/${{ inputs.target }}/release/bundle/msi"
+        $msiFile = "DevPod_${{ inputs.package_version }}_x64_en-US.msi"
+
+        if (Test-Path "$bundlePath/$msiFile") {
+          Compress-Archive -Path "$bundlePath/$msiFile" -DestinationPath "$bundlePath/$msiFile.zip" -Force
+          Write-Host "Created $bundlePath/$msiFile.zip"
+        }
+
+    - name: upload release assets
+      uses: actions/github-script@v8
       env:
         GITHUB_TOKEN: ${{ inputs.github_token }}
       with:
         script: |
           const fs = require("fs")
-
           const version = "${{ inputs.package_version }}"
+          const target = "${{ inputs.target }}"
+          const arch = "${{ inputs.arch }}"
 
-          // prepare MSI vars
-          const msiName = `DevPod_${version}_x64_en-US.msi`
-          const msiPath = `desktop/src-tauri/target/${{ inputs.target }}/release/bundle/msi/${msiName}`
-          const msiZipName = `${msiName}.zip`
-          const msiZipPath = `desktop/src-tauri/target/${{ inputs.target }}/release/bundle/msi/${msiZipName}`
-          const msiZipSigName = `${msiName}.zip.sig`
-          const msiZipSigPath = `desktop/src-tauri/target/${{ inputs.target }}/release/bundle/msi/${msiZipSigName}`
+          const bundlePath = `desktop/src-tauri/target/${target}/release/bundle`
+          const msiFile = `DevPod_${version}_x64_en-US.msi`
+          const nsisFile = `DevPod_${version}_x64-setup.exe`
 
-          // prepare NSIS vars
-          // the installer itself is suffixed with `.exe` but updater artifacts end with `.nsis.*`
-          const nsisName = `DevPod_${version}_x64-setup`
-          const nsisPath = `desktop/src-tauri/target/${{ inputs.target }}/release/bundle/nsis/${nsisName}.exe`
-
-          // Let's skip uploading the updater artifacts until we've figured out auto updating for both nsis and msi
-          // const nsisZipName = `${nsisName}.nsis.zip`
-          // const nsisZipPath = `desktop/src-tauri/target/${{ inputs.target }}/release/bundle/nsis/${nsisZipName}`
-          // const nsisZipSigName = `${nsisName}.nsis.zip.sig`
-          // const nsisZipSigPath = `desktop/src-tauri/target/${{ inputs.target }}/release/bundle/nsis/${nsisZipSigName}`
-
-          const cliName = "devpod-windows-${{ inputs.arch }}.exe"
-          const cliPath = "desktop/src-tauri/bin/devpod-cli-${{ inputs.target }}.exe"
-
-          const releaseId = "${{ inputs.release_id }}"
-
-          const releaseAssets = [
-            { name: cliName, path: cliPath },
-
-            { name: msiName, path: msiPath },
-            { name: msiZipName, path: msiZipPath },
-            { name: msiZipSigName, path: msiZipSigPath },
-
-            { name: `${nsisName}.exe`, path: nsisPath },
-            // { name: nsisZipName, path: nsisZipPath },
-            // { name: nsisZipSigName, path: nsisZipSigPath },
+          const assets = [
+            { name: `devpod-windows-${arch}.exe`, path: `desktop/src-tauri/bin/devpod-cli-${target}.exe` },
+            { name: msiFile, path: `${bundlePath}/msi/${msiFile}` },
+            { name: `${msiFile}.zip`, path: `${bundlePath}/msi/${msiFile}.zip` },
+            { name: nsisFile, path: `${bundlePath}/nsis/${nsisFile}` }
           ]
-          for (const asset of releaseAssets) {
-            console.log("Attempting to upload release asset: ", asset)
+
+          for (const asset of assets) {
+            if (!fs.existsSync(asset.path)) {
+              console.warn(`skipping missing file ${asset.path}`)
+              continue
+            }
+
+            console.log(`uploading ${asset.name}`)
             await github.rest.repos.uploadReleaseAsset({
               headers: {
-                "content-type": "application/zip",
+                "content-type": "application/octet-stream",
                 "content-length": fs.statSync(asset.path).size
               },
               name: asset.name,
               data: fs.readFileSync(asset.path),
               owner: context.repo.owner,
               repo: context.repo.repo,
-              release_id: releaseId
+              release_id: "${{ inputs.release_id }}"
             })
           }
