ci: remove pull request target from not required workflows
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/devcontainer.yml
+++ b/.github/workflows/devcontainer.yml
@@ -6,6 +6,11 @@ on:
     paths:
       - ".devcontainer/**"
       - ".github/workflows/devcontainer.yml"
+  pull_request:
+    branches: [main]
+    paths:
+      - ".devcontainer/**"
+      - ".github/workflows/devcontainer.yml"
   workflow_dispatch:
     inputs:
       runCmd:
