--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -3,29 +3,30 @@ name: Pull Request
 on:
   push:
     branches: [main]
+  workflow_dispatch:
   pull_request:
-    paths:
-      - .github/**
-      - Taskfile.yml
-  pull_request_target:
-    paths:
-      - cmd/**
-      - pkg/**
-      - desktop/**
-      - e2e/**
-      - Cargo.toml
-      - Cargo.lock
-      - go.mod
-      - go.sum
 
 jobs:
+  can-read-secret:
+    name: Can Read Secret
+    runs-on: ubuntu-latest
+    outputs:
+      secret-set: ${{ steps.check-secret.outputs.secret-set }}
+    steps:
+      - name: Check secret
+        id: check-secret
+        run: |
+          if [ -z "${{ secrets.TEST_ACCESS_TOKEN }}" ]; then
+            echo "secret-set=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "secret-set=true" >> "$GITHUB_OUTPUT"
+          fi
+
   build-ui:
     name: User Interface Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: setup Node
         uses: actions/setup-node@v6
@@ -63,8 +64,6 @@ jobs:
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v6
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - uses: actions/setup-go@v6
         with:
@@ -92,7 +91,7 @@ jobs:
           path: dist/devpod-${{ steps.os.outputs.runner_os }}_*/devpod-${{ steps.os.outputs.runner_os }}-*
 
   integration-tests:
-    needs: build-cli
+    needs: [can-read-secret, build-cli]
     strategy:
       matrix:
         include:
@@ -100,143 +99,125 @@ jobs:
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
 
           - label: ide
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
 
           - label: integration
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: true
 
           - label: machine
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
 
           - label: machineprovider
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: true
 
           - label: provider
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: ssh
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
 
           - label: build
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: false
 
           - label: up && workspace
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: false
 
           - label: up && git
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: true
 
           - label: up && provider-kubernetes
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: false
 
           - label: up && features
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: false
 
           - label: up && error
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: false
+
+          - label: up-private-token
+            runner: ubuntu-latest
+            free-disk-space: false
+            install-kind: false
 
           - label: up-podman
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            needs-github-token: false
 
           - label: up-docker
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: up-docker-wsl
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: up-docker-compose
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: up-docker-compose-build
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: up-docker-build
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: context
             runner: windows-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
 
           - label: provider
             runner: windows-latest
             free-disk-space: false
             install-kind: true
-            needs-github-token: false
 
           - label: docker-install
             runner: ubuntu-latest
             free-disk-space: false
             install-kind: false
-            needs-github-token: false
 
     runs-on: ${{ matrix.runner }}
     name: Test (${{ matrix.runner }} - ${{ matrix.label }})
+    if: ${{ needs.can-read-secret.outputs.secret-set == 'true' }}
     steps:
       - uses: jlumbroso/free-disk-space@v1.3.1
         if: matrix.free-disk-space == true && runner.os == 'Linux'
 
       - uses: actions/checkout@v6
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: setup Go
         uses: actions/setup-go@v6
@@ -328,7 +309,7 @@ jobs:
         env:
           # NOTE: Github credentials are required for tests using private repos
           GH_USERNAME: ${{ github.repository_owner }}
-          GH_ACCESS_TOKEN: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST }}
+          GH_ACCESS_TOKEN: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST || github.token }}
         run: |
           if [ "${{ runner.os }}" == "Linux" ]; then
             sudo \
@@ -387,8 +368,6 @@ jobs:
     name: Build App (${{ matrix.runner }} - ${{ matrix.target }})
     steps:
       - uses: actions/checkout@v6
-        with:
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: setup Node
         uses: actions/setup-node@v6
