--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -25,6 +25,12 @@ jobs:
         run: |
           sudo su - runner -c 'docker version; docker ps -a'
 
+      - name: Switch to runner user for all future commands
+        run: sudo su - runner
+
+      - name: Print current user
+        run: whoami
+
   can-read-secret:
     name: Can Read Secret
     runs-on: ubuntu-latest
@@ -331,7 +337,7 @@ jobs:
           GH_ACCESS_TOKEN: ${{ secrets.GH_PRIVATE_REPO_TOKEN_TEST || github.token }}
         run: |
           if [ "${{ runner.os }}" == "Linux" ]; then
-            sudo -u runner \
+            sudo \
               GH_USERNAME="${GH_USERNAME}" \
               GH_ACCESS_TOKEN="${GH_ACCESS_TOKEN}" \
               KUBECONFIG="${KUBECONFIG:-$HOME/.kube/config}" \
