--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -11,6 +11,8 @@ jobs:
     name: Debug Info
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v6
+
       - uses: go-task/setup-task@v1
 
       - uses: goreleaser/goreleaser-action@v6
