fixup!: add build flags for dev build
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,6 +52,14 @@ builds:
     goos: [linux]
     goarch: [amd64]
     binary: devpod-{{ .Os }}-{{ .Arch }}
+    ldflags:
+      - -s -w -extldflags "-static"
+    env:
+      - CGO_ENABLED=0
+    tags:
+      - netgo
+      - osusergo
+
 archives:
   - formats: [tar.gz]
     format_overrides:
