--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -12,8 +12,11 @@ builds:
     goos: [linux, darwin, windows]
     goarch: [amd64, arm64]
     binary: devpod
-    ldflags:
-      - -s -w -extldflags "-static"
+    overrides:
+      - goos: linux
+        goarch: amd64
+        ldflags:
+          - -s -w -extldflags "-static"
     env:
       - CGO_ENABLED=0
     tags:
@@ -27,8 +30,11 @@ builds:
     goos: [linux]
     goarch: [amd64, arm64]
     binary: devpod-{{ .Os }}-{{ .Arch }}
-    ldflags:
-      - -s -w -extldflags "-static"
+    overrides:
+      - goos: linux
+        goarch: amd64
+        ldflags:
+          - -s -w -extldflags "-static"
     env:
       - CGO_ENABLED=0
     tags:
@@ -42,25 +48,13 @@ builds:
     goos: [darwin]
     goarch: [amd64, arm64]
     binary: devpod-{{ .Os }}-{{ .Arch }}
-    ldflags:
-      - -s -w -extldflags "-static"
-    env:
-      - CGO_ENABLED=0
-    tags:
-      - netgo
-      - osusergo
 
   - id: devpod-windows
     goos: [windows]
     goarch: [amd64, arm64]
     binary: devpod-{{ .Os }}-{{ .Arch }}
-    ldflags:
-      - -s -w -extldflags "-static"
     env:
       - CGO_ENABLED=0
-    tags:
-      - netgo
-      - osusergo
 
   - id: devpod-dev
     goos: [linux]
