fixup!: set temp directory for github runner
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -13,6 +13,8 @@ jobs:
     outputs:
       secret-set: ${{ steps.check-secret.outputs.secret-set }}
     steps:
+      - run: printenv
+
       - name: Check secret
         id: check-secret
         run: |
