--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -89,7 +89,7 @@ tasks:
 
   cli:test:e2e:act:focus:
     # usage: task cli:test:e2e:act:focus -- "test focus pattern"
-    desc: run e2e tests in ACT environment
+    desc: run e2e tests using act with focus
     cmd: act workflow_dispatch -W .github/workflows/test.yml --input test_focus={{ .CLI_ARGS }}
 
   desktop:build:
