--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - run: printenv
 
+      - run: cat /etc/passwd
+
       - name: Check secret
         id: check-secret
         run: |
